--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,6 @@
 <nav>
-    <h1>{{ title$ | async }}</h1>
-    <button routerLink="movies/add">Add</button>
+    <h1 routerLink="/">{{ title$ | async }}</h1>
+    <button routerLink="movies/add" *ngIf="!router.url.includes('movies/add')">
+        Add
+    </button>
 </nav>
