--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,11 @@ html, body, main {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+*:focus {
+    outline: none !important;
+    border: 0 !important;
+}
+
 *,
 *::before,
 *::after {
